.k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: k8s-fibonacci/web:dev-0.1.10
          imagePullPolicy: Never
          ports:
            - containerPort: 80
