.k8s/web-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
