.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernets.io/ingress.class: ngnix
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-cluster-ip
                port: 
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-cluster-ip
                port: 
                  number: 5000
